src/test/ui/span/E0046.stderr
error[E0046]: not all trait items implemented, missing: `foo`
  --> $DIR/E0046.rs:17:1
   |
12 |     fn foo();
   |     --------- `foo` from trait
...
17 | impl Foo for Bar {}
   | ^^^^^^^^^^^^^^^^ missing `foo` in implementation

error: aborting due to previous error

